fix user-count size cuz it was too big

--- a/static/css/chatroom.css
+++ b/static/css/chatroom.css
@@ -12,7 +12,7 @@
     height: 450px;
     margin-left: 20px;
     margin-right: 20px;
-    width: 65%;
+    width: 80%;
     float: left;
     padding: 10px;
     border: 1px solid #000000;
